# simpleplug

./: Cargo.toml  README.md  install.sh
autoload/: simpleplug.vim
plugin/: simpleplug.vim
src/simpleplug/: simpleplug_daemon.rs
