[package]
name = "simpleplug"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simpleplug-daemon"
path = "src/simpleplug/simpleplug_daemon.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "process", "fs", "time"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
